# grpc

./: .env  Cargo.toml  README.md  docker-compose.yml
entity/src/: content.rs  lib.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240910_164721_create_table_test.rs
src/: main.rs
