[package]
name = "grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
dotenvy = "0.15.7"
futures = "0.3.30"
once_cell = "1.19.0"
sea-orm ={ version = "1.0.1", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros" ] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

